test_report.txt

> react-typescript-starter@0.1.0 test
> react-scripts test --coverage

FAIL src/Components/UserList.test.tsx
  ● Test suite failed to run

    Your test suite must contain at least one test.

      at onResult (node_modules/@jest/core/build/TestScheduler.js:175:18)
      at node_modules/@jest/core/build/TestScheduler.js:316:17
      at node_modules/emittery/index.js:260:13
          at Array.map (<anonymous>)
      at Emittery.emit (node_modules/emittery/index.js:258:23)

FAIL src/Components/AddMeal.test.tsx
  ● Test suite failed to run

    Your test suite must contain at least one test.

      at onResult (node_modules/@jest/core/build/TestScheduler.js:175:18)
      at node_modules/@jest/core/build/TestScheduler.js:316:17
      at node_modules/emittery/index.js:260:13
          at Array.map (<anonymous>)
      at Emittery.emit (node_modules/emittery/index.js:258:23)

FAIL src/Components/Centerlist.test.tsx
  ● Test suite failed to run

    Your test suite must contain at least one test.

      at onResult (node_modules/@jest/core/build/TestScheduler.js:175:18)
      at node_modules/@jest/core/build/TestScheduler.js:316:17
      at node_modules/emittery/index.js:260:13
          at Array.map (<anonymous>)
      at Emittery.emit (node_modules/emittery/index.js:258:23)

FAIL src/Components/UserDropdown.test.tsx
  ● Test suite failed to run

    Your test suite must contain at least one test.

      at onResult (node_modules/@jest/core/build/TestScheduler.js:175:18)
      at node_modules/@jest/core/build/TestScheduler.js:316:17
      at node_modules/emittery/index.js:260:13
          at Array.map (<anonymous>)
      at Emittery.emit (node_modules/emittery/index.js:258:23)

FAIL src/Components/UserTypeSelectButtons.test.tsx
  ● Test suite failed to run

    Your test suite must contain at least one test.

      at onResult (node_modules/@jest/core/build/TestScheduler.js:175:18)
      at node_modules/@jest/core/build/TestScheduler.js:316:17
      at node_modules/emittery/index.js:260:13
          at Array.map (<anonymous>)
      at Emittery.emit (node_modules/emittery/index.js:258:23)

FAIL src/Components/AddUser.test.tsx
  ● Test suite failed to run

    Your test suite must contain at least one test.

      at onResult (node_modules/@jest/core/build/TestScheduler.js:175:18)
      at node_modules/@jest/core/build/TestScheduler.js:316:17
      at node_modules/emittery/index.js:260:13
          at Array.map (<anonymous>)
      at Emittery.emit (node_modules/emittery/index.js:258:23)

FAIL src/Components/UnusedFiles/SuperUserButton.test.tsx
  ● Test suite failed to run

    Your test suite must contain at least one test.

      at onResult (node_modules/@jest/core/build/TestScheduler.js:175:18)
      at node_modules/@jest/core/build/TestScheduler.js:316:17
      at node_modules/emittery/index.js:260:13
          at Array.map (<anonymous>)
      at Emittery.emit (node_modules/emittery/index.js:258:23)

FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/Final-Project-275/Final-Project-275/node_modules/react-dnd/dist/index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){export * from './core/index.js';
                                                                                      ^^^^^^

    SyntaxError: Unexpected token 'export'

       7 | } from "./Components/UserTypeSelectButtons";
       8 | import { User } from "./Interfaces/UserObject";
    >  9 | import { DndProvider } from "react-dnd";
         | ^
      10 | import { HTML5Backend } from "react-dnd-html5-backend";
      11 | import { CenterList } from "./Components/Centerlist";
      12 | import { MEAL_LIST } from "./Interfaces/MealObject";

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/App.tsx:9:1)

FAIL src/Components/UnusedFiles/UserTypeIndicator.test.tsx
  ● Test suite failed to run

    Your test suite must contain at least one test.

      at onResult (node_modules/@jest/core/build/TestScheduler.js:175:18)
      at node_modules/@jest/core/build/TestScheduler.js:316:17
      at node_modules/emittery/index.js:260:13
          at Array.map (<anonymous>)
      at Emittery.emit (node_modules/emittery/index.js:258:23)

-----------------------------|---------|----------|---------|---------|-------------------
File                         | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------------------------|---------|----------|---------|---------|-------------------
All files                    |       0 |        0 |       0 |       0 |                   
 src                         |       0 |        0 |       0 |       0 |                   
  App.tsx                    |       0 |        0 |       0 |       0 | 26-42             
 src/Components              |       0 |        0 |       0 |       0 |                   
  Aboutus.tsx                |       0 |        0 |       0 |       0 | 10-22             
  AddMeal.tsx                |       0 |        0 |       0 |       0 | 18-291            
  AddUser.tsx                |       0 |        0 |       0 |       0 | 13-118            
  AdminListComponent.tsx     |       0 |        0 |       0 |       0 | 27-71             
  Centerlist.tsx             |       0 |        0 |       0 |       0 | 60-344            
  EditMeal.tsx               |       0 |        0 |       0 |       0 | 47-415            
  FilterButtons.tsx          |       0 |        0 |       0 |       0 | 12-23             
  NutritionTotalButton.tsx   |       0 |        0 |       0 |       0 | 10-35             
  Sidebar.tsx                |       0 |      100 |       0 |       0 | 5                 
  SortFunction.tsx           |       0 |        0 |       0 |       0 | 11-50             
  SubsituteIngrediantesP.tsx |       0 |        0 |       0 |       0 | 25-110            
  UserDropdown.tsx           |       0 |        0 |       0 |       0 | 21-62             
  UserList.tsx               |       0 |        0 |       0 |       0 | 25-113            
  UserListPopup.tsx          |       0 |        0 |       0 |       0 | 20-114            
  UserTypeSelectButtons.tsx  |       0 |        0 |       0 |       0 | 20-70             
  UsersWithItemPopup.tsx     |       0 |        0 |       0 |       0 | 18-52             
 src/Components/UnusedFiles  |       0 |        0 |       0 |       0 |                   
  UserTypeIndicator.tsx      |       0 |        0 |       0 |       0 |                   
 src/Interfaces              |       0 |      100 |     100 |       0 |                   
  AdminEditHiddenProps.ts    |       0 |        0 |       0 |       0 |                   
  AdminListProps.ts          |       0 |        0 |       0 |       0 |                   
  CurrentUserProps.ts        |       0 |        0 |       0 |       0 |                   
  FilterChoices.ts           |       0 |        0 |       0 |       0 |                   
  MealObject.tsx             |       0 |      100 |     100 |       0 | 41                
  PointerProps.ts            |       0 |        0 |       0 |       0 |                   
  SortOptionsProps.ts        |       0 |        0 |       0 |       0 |                   
  UserListProps.ts           |       0 |        0 |       0 |       0 |                   
  UserObject.tsx             |       0 |        0 |       0 |       0 |                   
  UserTypeProps.ts           |       0 |        0 |       0 |       0 |                   
-----------------------------|---------|----------|---------|---------|-------------------
Test Suites: 9 failed, 9 total
Tests:       0 total
Snapshots:   0 total
Time:        8.438 s
Ran all test suites.
